<resources>
    <string name="app_name">iBipAPP</string>
    <string name="nombres">nombres</string>
    <string name="apellidos">apellidos</string>
    <string name="encabezado">Perfiles</string>
    <string name="btn1">Botón 1</string>
    <string name="btn2">Botón 2</string>
    <string name="btn3">Botón 3</string>
    <string name="btn4">Botón 4</string>
    <string name="btn5">Botón 5</string>
    <string name="btn6">Botón 6</string>
    <string name="btn7">Botón 7</string>
    <string name="btn8">Botón 8</string>
    <string name="btn9">Botón 9</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="guardar_sesion">Guardar sesion</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">username</string>
    <string name="Username">Username</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="volver">Volver</string>
    <string name="menu1">1. Nuggets</string>
    <string name="menu2">2. McFlurry</string>
</resources>