<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpaper"
    android:orientation="vertical"

    tools:context=".sharedPreferencesLogin.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="Sign in"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/login"
            android:hint="@string/Username"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="#30ffffff"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/infoico"
            android:layout_margin="10dp"
            android:padding="20dp"/>

        <CheckBox
            android:id="@+id/guardar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/guardar_sesion" />

        <Button
            android:id="@+id/iniciar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#6329EA"
            android:padding="10dp"
            android:text="@string/iniciar_sesion" />

    </LinearLayout>

</RelativeLayout>