<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".pasarDatosActivityResultadoAtrasCalculadora.MainActivity2">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mensajerecibido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#32FFFFFF"
                android:ems="10"
                android:minHeight="48dp"

                android:textAlignment="center"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="44dp" />

            <TextView
                android:id="@+id/mensajerecibido2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#36FFFFFF"
                android:ems="10"
                android:minHeight="48dp"

                android:textAlignment="center" />

            <TextView
                android:id="@+id/resultadofgf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#36FFFFFF"
                android:ems="10"
                android:minHeight="48dp"

                android:textAlignment="center"
                android:textColor="#59EA39" />

        </LinearLayout>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:columnCount="2"
            app:rowCount="2">

            <Button
                android:id="@+id/butonsuma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sumaract"
                android:text="@string/sumar"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="117dp" />

            <Button
                android:id="@+id/butonresta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="restaract"
                android:text="@string/restar"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="117dp" />

            <Button
                android:id="@+id/butonmultiplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="multiplicaract"
                android:text="@string/multiplicar"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="117dp" />

            <Button
                android:id="@+id/butondividr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="dividiract"
                android:text="@string/dividir"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="117dp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#348A50"
                android:onClick="volverresultado"
                android:text="@string/volver" />
        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>
</LinearLayout>